--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -75,6 +75,7 @@
         android:layout_width="382dp"
         android:layout_height="56dp"
         android:layout_marginTop="104dp"
+        android:background="@drawable/button_main"
         android:text="Pay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
