--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -71,12 +71,12 @@
         app:layout_constraintTop_toBottomOf="@+id/rvExpireDate" />
 
     <Button
-        android:id="@+id/PaySubmitBtn"
+        android:id="@+id/btnsend"
         android:layout_width="382dp"
         android:layout_height="56dp"
         android:layout_marginTop="104dp"
         android:background="@drawable/button_main"
-        android:text="Pay"
+        android:text="Pay Now"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
