--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -10,8 +10,8 @@
         android:id="@+id/textView4"
         android:layout_width="229dp"
         android:layout_height="56dp"
-        android:text="@string/payment_details"
-        android:textSize="20sp"
+        android:text="Card Details"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
